<resources>
    <string name="app_name">Teams</string>
    <string name="show_a_list_of_teams">Show a list of Teams</string>
    <string name="show_the_map_page">Show the map page</string>
    <string name="show_the_settings_page">Show the settings page</string>
    <string name="team_image">Team Image</string>
    <string name="is_favorite">Is Favorite</string>
    <string name="off">OFF</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="city">City</string>
    <string name="enter_city">Enter City</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="rating">Rating</string>
    <string name="rate">Rate</string>
    <string name="delete">Delete</string>
    <string name="_100">100%</string>
    <string name="newtext">New</string>
    <string name="sortby">Sort By</string>
    <string name="sort_order">Sort Order\n</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="team_settings">Settings\n</string>
    <string name="api_url">https://fvtcdp.azurewebsites.net/api/Team/</string>
    <string name="address">Address:</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="wnw">wnw</string>
    <string name="team_map_activity">Team Map Activity</string>
</resources>